Fix brand image positioning on small screens

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -7,9 +7,12 @@ body {
   margin: 80px 0 100px 0;
 }
 
-.navbar img {
-  width: 40px;
-  margin-top: 5px;
+.navbar {
+  img {
+    width: 40px;
+    margin-top: 5px;
+    margin-left: 10px;
+  }
 }
 
 .footer {
@@ -25,8 +28,10 @@ body {
   }
 }
 
-.container .text-muted {
-  margin: 15px 0;
-  font-size: 95%;
+.container {
+  .text-muted {
+    margin: 15px 0;
+    font-size: 95%;
+  }
 }
 
